<resources>
    <string name="app_name">Sophie Inventory App Part Two</string>
    <string name="action_settings">Settings</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_phone">Phone Number</string>
    <string name="dial">Dial</string>
    <string name="quantity_small">1</string>
    <string name="quantity_medium">5</string>
    <string name="quantity_large">10</string>
    <string name="action_insert_dummy_data">Place Dummy Data</string>
    <string name="action_delete_all_entries">Delete Inventory</string>
    <string name="action_saved">Save</string>
    <string name="action_deleted">Delete</string>
    <string name="editor_title_new_inventory">Add Inventory</string>
    <string name="editor_title_edit">Edit Product Here</string>
    <string name="editor_activity_title_new_product">Add inventory here</string>
    <string name="editor_insert_inventory_fail">Inventory has not been added</string>
    <string name="editor_insert_inventory_success">Make sure you fill in all the boxes!</string>
    <string name="empty_view_title_text">It\'s a bit lonely here.</string>
    <string name="empty_view_subtitle_text">Get started by adding a product!</string>
    <string name="editor_update_pet_fail">Updated failed</string>
    <string name="editor_update_pet_success">Update complete</string>
    <string name="unsaved_changes_dialog_mag">Not saved</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this?</string>
    <string name="delete">Delete</string>
    <string name="cancel">No</string>
    <string name="editor_delete_inventory_fail">Inventory failed to update</string>
    <string name="editor_delete_pet_success">Inventory successfully deleted</string>
    <string name="buttonFloat">Click Here!</string>

</resources>
