<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:text="@string/category_overview"
            style="@style/Theme.AppCompat.DayNight.Dialog"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="text"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="number"/>

        </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_quantity"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/spinner_quantity"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>

        </LinearLayout>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container_supplier"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_supplier"
            />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_supplier"
            android:inputType="text"
            />

        <RelativeLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_phone"
                android:hint="@string/hint_phone"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_phone_number"
                android:text="@string/dial"/>

        </RelativeLayout>
    </LinearLayout>

    </LinearLayout>
